force-app/main/default/objects/WooCmmerce_Config__c/WooCmmerce_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>WooCmmerce Config</label>
</CustomObject>