force-app/main/default/objects/WooCmmerce_Config__c/fields/Consumer_key__c.field-meta.xml
<CustomField>
    <fullName>Consumer_key__c</fullName>
    <label>Consumer key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>