force-app/main/default/objects/WooCmmerce_Config__c/fields/Consumer_secret__c.field-meta.xml
<CustomField>
    <fullName>Consumer_secret__c</fullName>
    <label>Consumer secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>